# intellij-rust-issues

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: error.rs  lib.rs  testing.rs  writer.rs
