[package]
name = "interoptopus"
description = "The polyglot bindings generator for your library (C#, C, Python, ...). 🐙"
authors = ["Ralf Biedert <rb@xr.io>"]
keywords = ["ffi", "code-generation", "bindings"]
categories = ["api-bindings", "development-tools::ffi"]
version = "0.13.8"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/interoptopus/"
repository = "https://github.com/ralfbiedert/interoptopus"


[dependencies]
serde = { version = "1.0.130", optional = true, features = ["derive"] }
log = { version = "0.4.14", optional = true }

